force-app/main/default/objects/Appointment_Service__c/Appointment_Service__c.object-meta.xml
<CustomObject>
    <label>Appointment Service</label>
    <pluralLabel>Appointment Services</pluralLabel>
    <nameField>
        <label>Appointment Service Number</label>
        <displayFormat>AS-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Services included in an appointment with pricing captured at booking time</description>
</CustomObject>