force-app/main/default/objects/Appointment_Service__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <label>Appointment</label>
    <type>MasterDetail</type>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Appointment_Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>The appointment this service is part of</description>
</CustomField>