force-app/main/default/objects/Appointment_Service__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Duration for this service (captured at booking time)</description>
    <inlineHelpText>Time allocated for this service</inlineHelpText>
</CustomField>