force-app/main/default/objects/Appointment_Service__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
    <description>Notes specific to this service</description>
    <inlineHelpText>Any special instructions for this service</inlineHelpText>
</CustomField>