force-app/main/default/objects/Appointment_Service__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price</label>
    <type>Currency</type>
    <precision>8</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Price charged for this service (captured at booking time)</description>
    <inlineHelpText>Price locked in at time of booking</inlineHelpText>
</CustomField>