force-app/main/default/objects/Appointment_Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Lookup</type>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Appointment History</relationshipLabel>
    <relationshipName>Appointment_Services</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The service being performed</description>
    <inlineHelpText>Select the service</inlineHelpText>
</CustomField>