force-app/main/default/objects/Appointment_Service__c/fields/Stylist_Service__c.field-meta.xml
<CustomField>
    <fullName>Stylist_Service__c</fullName>
    <label>Stylist Service</label>
    <type>Lookup</type>
    <referenceTo>Stylist_Service__c</referenceTo>
    <relationshipLabel>Appointment Services</relationshipLabel>
    <relationshipName>Appointment_Services</relationshipName>
    <description>Optional link to specific stylist-service record used</description>
    <inlineHelpText>The specific stylist-service combination for pricing/duration</inlineHelpText>
</CustomField>